crates/glyph-cli/tests/corpus/invalid/imports/circular_a.glyph
import "./circular_b.glyph" { something }

export const a_text = "From A."
